apps/testgoapp3/base/testgoapp3-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testgoapp3-vs
  namespace: testgoapp3
  labels:
    app: testgoapp3
    version: 0.0.1
    backstage.io/kubernetes-id: testgoapp3
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - testgoapp3.demo.fisdev.link
  http:
  - name: primary
    route:
    - destination:
        host: testgoapp3-svc
      weight: 100
